<resources>
    <string name="app_name">Checkout Example</string>
    <string name="order_total_description">Thank you for your order! Your total is:</string>
    <string name="order_total_cost">$%d</string>
    <string name="quantity_1">1</string>
    <string name="checkout">$%d Checkout</string>
    <string name="stock_msg">(%d items left)</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="low_stock_error">😿 Sorry. We only have %d cupcakes.</string>
    <string name="quantity">Quantity</string>
    <string name="product_price">$5</string>
    <string name="hazelnut_cupcakes">Hazelnut Cupcakes</string>
    <string name="product_description">The most incredible and delicious cupcakes you\'ve ever had! Seriously, try them. They\'re amazing!.</string>
    <string name="edit_order">Edit Order</string>
    <string name="cupcake_icon_desc">Cupcake icon</string>
    <string name="add">Add</string>
    <string name="cupcakes_header_image">cupcakes header image</string>
</resources>
